<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_photography">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/photography" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvHeadingPhotography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_weight="1"
        android:text="@string/photographyHeader" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvDescPhotography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/photographyDesc" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvVenuePhotography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/venuePhotography" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvUrlPhotography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/urlPhotography" />
</LinearLayout>