<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_collection">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/collection" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvColHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collectionHeader" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvDescCol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descCollection" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvVenueCol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Venue: flea markets" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvUrlCol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urlCol" />

</LinearLayout>